--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,8 @@
   line-height: 1.5;
   font-weight: 400;
 
-  background-color: #242424;
+  background-color: var(--background);
+  color: var(--text);
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -21,6 +22,12 @@
 
   --border-radius: 4px;
   --transition: all 0.25s cubic-bezier(0.645,0.045,0.355,1);
+
+  --text: #fbfdfe;
+  --background: #020508;
+  --primary: #1b3b55;
+  --secondary: #0b1823;
+  --accent: #3c83be;
 }
 
 a {
