--- a/src/layouts/Navbar/index.module.scss
+++ b/src/layouts/Navbar/index.module.scss
@@ -1,7 +1,7 @@
 .sidebar {
   min-height: 100vh;
   width: 250px;
-  padding: 6px 14px;
+  padding: 10px 14px;
   z-index: 99;
   background: var(--background);
   transition: var(--transition);
@@ -116,7 +116,8 @@
 
 .link {
   color: var(--text);
-  font: 16px;
+  font: 12px;
+  font-weight: 600;
   white-space: nowrap;
   pointer-events: auto;
   transition: var(--transition);
