--- a/src/components/NewOrderItem/index.module.scss
+++ b/src/components/NewOrderItem/index.module.scss
@@ -1,6 +1,33 @@
 .receipt-item {
-  background: red;
   width: 100%;
-  height: 65px;
   margin-bottom: 20px;
+  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+  background: var(--primary);
+  border-radius: var(--border-radius);
+}
+
+.receipt {
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  padding: 10px;
+  gap: 10px;
+
+  > p {
+    font-size: 20px;
+    font-weight: 600;
+  }
+}
+
+.receipt-row {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+
+  > svg {
+    width: 25px;
+    height: 25px;
+  }
 }
