styling and remove all from checkout option

--- a/src/components/NewOrderItem/index.module.css
+++ b/src/components/NewOrderItem/index.module.css
@@ -26,6 +26,7 @@
   align-items: center;
 }
 .receipt-row > svg {
-  width: 25px;
-  height: 25px;
+  width: 24px;
+  height: 24px;
+  cursor: pointer;
 }/*# sourceMappingURL=index.module.css.map */
