--- a/src/components/NewOrderItem/index.module.scss
+++ b/src/components/NewOrderItem/index.module.scss
@@ -27,7 +27,8 @@
   align-items: center;
 
   > svg {
-    width: 25px;
-    height: 25px;
+    width: 24px;
+    height: 24px;
+    cursor: pointer;
   }
 }
