--- a/src/components/NewOrderServiceType/index.module.css
+++ b/src/components/NewOrderServiceType/index.module.css
@@ -1,10 +1,8 @@
-.service-item {
-  background: var(--secondary);
+.service-type {
+  background: var(--primary);
   height: 150px;
   border-radius: var(--border-radius);
   cursor: pointer;
-  transition: var(--transition);
-  animation: start 0.1s ease;
 }
 
 .service {
@@ -13,13 +11,4 @@
   align-items: center;
   justify-content: center;
   height: 100%;
-}
-
-@keyframes start {
-  from {
-    scale: 0;
-  }
-  to {
-    scale: 1;
-  }
 }/*# sourceMappingURL=index.module.css.map */
