--- a/src/pages/NewOrder/index.module.scss
+++ b/src/pages/NewOrder/index.module.scss
@@ -9,13 +9,24 @@
   height: 100%;
   padding: 10px;
   padding-right: 35px;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
 }
 
-.service-list {
+.service-list, .service-items-list {
   width: 100%;
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
   gap: 10px;
+}
+
+.service-items-list {
+  overflow: auto;
+
+  &::-webkit-scrollbar{
+    display: none;
+  }
 }
 
 .receipts {
@@ -77,13 +88,13 @@
 }
 
 .receipt-final {
-  height: 160px;
+  height: auto;
   width: 100%;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 10px 20px;
+  padding: 20px 25px;
   background: var(--background);
   position: relative;
   gap: 5px;
@@ -107,10 +118,10 @@
 }
 
 .receipt-list {
-  flex: 1;
+  flex: 1 0 0;
   overflow: auto;
-  max-height: 630px; 
   padding: 20px 0;
+  min-height: 0;
 
   &::-webkit-scrollbar{
     display: none;
