--- a/src/pages/NewOrder/index.module.css
+++ b/src/pages/NewOrder/index.module.css
@@ -23,6 +23,7 @@
 
 .service-items-list {
   overflow: auto;
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
 }
 .service-items-list::-webkit-scrollbar {
   display: none;
