styling and added more items

--- a/src/components/NewOrderServiceType/index.module.css
+++ b/src/components/NewOrderServiceType/index.module.css
@@ -11,4 +11,8 @@
   align-items: center;
   justify-content: center;
   height: 100%;
+}
+
+.active {
+  background: var(--secondary);
 }/*# sourceMappingURL=index.module.css.map */
