--- a/src/components/NewOrderServiceItem/index.module.scss
+++ b/src/components/NewOrderServiceItem/index.module.scss
@@ -3,7 +3,7 @@
   height: 100px;
   border-radius: var(--border-radius);
   cursor: pointer;
-  transition: var(--transition);
+  transition: scale var(--transition);
   animation: start 0.1s ease;
 }
 
@@ -13,6 +13,29 @@
   align-items: center;
   justify-content: center;
   height: 100%;
+
+  > p {
+    text-align: center;
+    width: 100%;
+    color: #000;
+    font-weight: 600;
+  }
+}
+
+.cleaning {
+  background: #5e9af3;
+}
+
+.pressOnly {
+  background: #9beb76;
+}
+
+.household {
+  background: #fffd79;
+}
+
+.alterations {
+  background: #0c2f45;
 }
 
 @keyframes start {
