--- a/src/pages/NewOrder/index.module.css
+++ b/src/pages/NewOrder/index.module.css
@@ -12,6 +12,7 @@
   display: flex;
   flex-direction: column;
   gap: 25px;
+  max-height: calc(100vh - 50px);
 }
 
 .service-list, .service-items-list {
@@ -158,5 +159,8 @@
   }
   .receipts::before {
     display: none;
+  }
+  .receipt-list {
+    flex: 1 0 600px;
   }
 }/*# sourceMappingURL=index.module.css.map */
