--- a/src/components/NewOrderServiceType/index.module.css
+++ b/src/components/NewOrderServiceType/index.module.css
@@ -12,6 +12,10 @@
   justify-content: center;
   height: 100%;
 }
+.service > p {
+  font-size: 20px;
+  font-weight: 600;
+}
 
 .active {
   background: var(--secondary);
