--- a/src/components/NewOrderServiceType/index.module.scss
+++ b/src/components/NewOrderServiceType/index.module.scss
@@ -11,6 +11,11 @@
   align-items: center;
   justify-content: center;
   height: 100%;
+
+  > p {
+    font-size: 20px;
+    font-weight: 600;
+  }
 }
 
 .active {
