--- a/src/components/NewOrderServiceType/index.module.scss
+++ b/src/components/NewOrderServiceType/index.module.scss
@@ -15,9 +15,32 @@
   > p {
     font-size: 20px;
     font-weight: 600;
+    color: #000;
   }
+}
+
+
+
+.cleaning {
+  background: #5e9af3;
+}
+
+.press-only {
+  background: #9beb76;
+}
+
+.household {
+  background: #fffd79;
+}
+
+.alterations {
+  background: #134e72;
 }
 
 .active {
   background: var(--secondary);
+
+  > .service > p {
+    color: white;
+  }
 }
