--- a/src/pages/NewOrder/index.module.css
+++ b/src/pages/NewOrder/index.module.css
@@ -23,6 +23,7 @@
 }
 
 .service-items-list {
+  margin-top: 25px;
   overflow: auto;
   grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
 }
