--- a/src/components/FinalReceipt/index.module.css
+++ b/src/components/FinalReceipt/index.module.css
@@ -7,14 +7,16 @@
   top: 0;
   z-index: 1000;
   overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 20px;
 }
 
 .outer {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
   width: 350px;
+  max-height: 475px;
   background: white;
   border-radius: var(--border-radius);
   border: 5px solid var(--primary);
@@ -22,6 +24,7 @@
   flex-direction: column;
   padding: 10px;
   align-items: center;
+  overflow: auto;
 }
 
 .close-btn {
@@ -32,29 +35,9 @@
   line-height: 25px;
   background: none;
   border: none;
-  color: white;
+  color: #000;
   cursor: pointer;
   margin-bottom: 10px;
-}
-
-.form-input {
-  width: 100%;
-  padding: 0 40px;
-}
-.form-input > input {
-  width: 100%;
-  height: 48px;
-  padding: 5px 10px;
-  border-radius: var(--border-radius);
-  padding: 10px 20px;
-  background: var(--primary);
-  font-size: 18px;
-  color: var(--text);
-  border: none;
-}
-.form-input > label {
-  font-size: 17px;
-  padding-bottom: 10px;
 }
 
 .form {
@@ -65,7 +48,7 @@
 
 .form-buttons {
   display: flex;
-  width: 100%;
+  width: 400px;
   flex-direction: row;
   gap: 10px;
   padding: 0 40px;
@@ -132,4 +115,8 @@
 
 .note {
   font-size: 8px !important;
+}
+
+.break {
+  page-break-after: always;
 }/*# sourceMappingURL=index.module.css.map */
