--- a/src/components/FinalReceipt/index.module.css
+++ b/src/components/FinalReceipt/index.module.css
@@ -78,17 +78,18 @@
   flex-direction: column;
   align-items: center;
   max-width: 280px;
+  font-family: "Helvetica", "Arial", sans-serif;
 }
 .receipt p {
   color: black;
   text-transform: uppercase;
   font-weight: 600;
   text-align: center;
-  font-size: 12px;
+  font-size: 15.6px;
 }
 
 .heading {
-  margin-top: 50px;
+  margin-top: 30px;
   margin-bottom: 20px;
 }
 
@@ -98,7 +99,7 @@
 }
 
 .ticket-items {
-  padding: 20px 40px;
+  padding: 20px 25px;
 }
 
 .ticket-item {
@@ -110,18 +111,43 @@
 
 .total-pieces {
   text-align: center;
-  margin-top: 20px;
+  margin: 20px 0;
 }
 
 .note {
-  font-size: 8px !important;
+  font-size: 12.5px !important;
+  margin: 5px 0;
 }
 
 .break {
   page-break-after: always;
 }
 
-.ticket-number {
+.ticket-no {
   text-align: left !important;
   margin-bottom: 10px;
+  font-size: 18px !important;
+}
+
+@media print {
+  .receipt {
+    margin: 0 auto;
+  }
+}
+.xl {
+  font-size: 18px !important;
+}
+
+.title {
+  word-spacing: 10px;
+}
+
+.owner {
+  font-size: 16px !important;
+  word-spacing: 10PX;
+}
+
+.info {
+  font-size: 14.5px !important;
+  letter-spacing: 2px;
 }/*# sourceMappingURL=index.module.css.map */
