--- a/src/components/FinalReceipt/index.module.css
+++ b/src/components/FinalReceipt/index.module.css
@@ -15,8 +15,8 @@
 }
 
 .outer {
-  width: 350px;
-  max-height: 475px;
+  width: 375px;
+  max-height: 500px;
   background: white;
   border-radius: var(--border-radius);
   border: 5px solid var(--primary);
@@ -100,9 +100,21 @@
 
 .ticket-items {
   padding: 20px 25px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
 
 .ticket-item {
+  width: 100%;
+}
+.ticket-item > ul > li {
+  color: black;
+  padding-left: 20px;
+  text-transform: capitalize;
+}
+
+.ticket-item-name {
   width: 100%;
   display: flex;
   flex-direction: row;
