--- a/src/components/FinalReceipt/index.module.scss
+++ b/src/components/FinalReceipt/index.module.scss
@@ -15,8 +15,8 @@
 }
 
 .outer {
-  width: 350px;
-  max-height: 475px;
+  width: 375px;
+  max-height: 500px;
   background: white;
   border-radius: var(--border-radius);
   border: 5px solid var(--primary);
@@ -103,9 +103,22 @@
 
 .ticket-items {
   padding: 20px 25px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
 }
 
 .ticket-item {
+  width: 100%;
+
+  > ul > li {
+    color: black;
+    padding-left: 20px;
+    text-transform: capitalize;
+  }
+}
+
+.ticket-item-name {
   width: 100%;
   display: flex;
   flex-direction: row;
