--- a/src/pages/NewOrder/index.module.css
+++ b/src/pages/NewOrder/index.module.css
@@ -130,7 +130,7 @@
 
 .receipt-grid {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
   gap: 5px;
   margin-top: 10px;
 }
@@ -138,14 +138,19 @@
 .receipt-btn {
   padding: 10px 20px;
   background: var(--primary);
-  font-size: 18px;
+  font-size: 20px;
   color: var(--text);
   border: none;
   cursor: pointer;
+  height: 75px;
 }
 .receipt-btn:disabled {
   background: #070f15;
   cursor: no-drop;
+}
+
+.not-paid {
+  background: #070f15;
 }
 
 @media (max-width: 1624px) {
