--- a/src/components/CheckoutMenu/index.module.scss
+++ b/src/components/CheckoutMenu/index.module.scss
@@ -110,6 +110,13 @@
   margin-top: 10px  ;
 }
 
+.receipt-days-grid {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 5px;
+  margin-top: 10px  ;
+}
+
 .receipt-btn {
   padding: 10px 20px;
   background: var(--primary);
@@ -123,6 +130,15 @@
     background: #070f15;
     cursor: no-drop;
   }
+}
+
+.day {
+  text-transform: uppercase;
+  background: #070f15;
+}
+
+.day.active {
+  background: #FF5733 !important;
 }
 
 .not-paid {
