--- a/src/components/FinalReceipt/index.module.css
+++ b/src/components/FinalReceipt/index.module.css
@@ -96,6 +96,7 @@
 .receipt-info {
   margin-top: 20px;
   margin-bottom: 20px;
+  width: 100%;
 }
 
 .ticket-items {
@@ -135,8 +136,20 @@
   page-break-after: always;
 }
 
+.ticket-date {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.ticket-date > b {
+  margin-right: auto;
+  margin-left: 20px;
+}
+
 .ticket-no {
-  text-align: left !important;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
   margin-bottom: 10px;
   font-size: 18px !important;
 }
