--- a/src/components/FinalReceipt/index.module.css
+++ b/src/components/FinalReceipt/index.module.css
@@ -89,7 +89,7 @@
 }
 
 .heading {
-  margin-top: 30px;
+  margin-top: 10px;
   margin-bottom: 20px;
 }
 
@@ -100,7 +100,7 @@
 }
 
 .ticket-items {
-  padding: 20px 25px;
+  padding: 10px 25px;
   display: flex;
   flex-direction: column;
   gap: 5px;
@@ -151,7 +151,9 @@
   flex-direction: row;
   justify-content: space-between;
   margin-bottom: 10px;
-  font-size: 18px !important;
+}
+.ticket-no > P {
+  font-size: 20px !important;
 }
 
 @media print {
