--- a/src/components/FinalReceipt/index.module.scss
+++ b/src/components/FinalReceipt/index.module.scss
@@ -92,7 +92,7 @@
 }
 
 .heading {
-  margin-top: 30px;
+  margin-top: 10px;
   margin-bottom: 20px;
 }
 
@@ -103,7 +103,7 @@
 }
 
 .ticket-items {
-  padding: 20px 25px;
+  padding: 10px 25px;
   display: flex;
   flex-direction: column;
   gap: 5px;
@@ -156,7 +156,10 @@
   flex-direction: row;
   justify-content: space-between;
   margin-bottom: 10px;
-  font-size: 18px !important;
+  
+  > P {
+    font-size: 20px !important;
+  }
 }
 
 @media print {
