--- a/src/pages/Customers/index.module.css
+++ b/src/pages/Customers/index.module.css
@@ -5,11 +5,23 @@
 }
 
 .search-bar {
+  max-width: 400px;
   width: 100%;
   padding: 15px 10px;
   font-size: 18px;
   border: none;
   border-radius: var(--border-radius);
+}
+
+.back-btn {
+  max-width: 200px;
+  width: 100%;
+  padding: 15px 10px;
+  font-size: 18px;
+  border: none;
+  border-radius: var(--border-radius);
+  margin-left: auto;
+  cursor: pointer;
 }
 
 .customers {
@@ -62,4 +74,7 @@
   .customers {
     padding-right: 10px;
   }
+}
+.spacing {
+  margin-top: 20px;
 }/*# sourceMappingURL=index.module.css.map */
