--- a/src/components/PaidForm/index.module.css
+++ b/src/components/PaidForm/index.module.css
@@ -2,6 +2,7 @@
   position: absolute;
   width: 100%;
   height: 100%;
+  background: rgba(0, 0, 0, 0.7137254902);
   left: 0;
   top: 0;
   z-index: 1000;
