--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@
   --transition: all 0.25s cubic-bezier(0.645,0.045,0.355,1);
 
   --text: #fbfdfe;
-  --background: #ff0000;
+  --background: #020508;
   --primary: #1b3b55;
   --secondary: #0b1823;
   --accent: #3c83be;
