--- a/src/components/CheckItem/index.module.scss
+++ b/src/components/CheckItem/index.module.scss
@@ -52,6 +52,11 @@
     border: none;
   }
 
+  > input[type='checkbox'] {
+    width: 48px;
+    margin-left: auto;
+  }
+
   > label {
     font-size: 17px;
     padding-bottom: 10px;
