payment form changes

--- a/src/components/PaidForm/index.module.scss
+++ b/src/components/PaidForm/index.module.scss
@@ -59,7 +59,7 @@
 .top {
   width: 100%;
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1fr calc(2.05fr);
   gap: 10px;
 
   > .change-amount, > input {
@@ -69,7 +69,7 @@
 
   > input {
     font-size: 24px;
-    padding: 0 10px;
+    padding: 15px 10px;
     border: none;
     color: var(--text);
 
@@ -82,6 +82,10 @@
 
 .change-amount {
   padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  font-size: 24px;
 }
 
 .payment-amount {
