--- a/src/components/PaymentForm/index.module.css
+++ b/src/components/PaymentForm/index.module.css
@@ -2,6 +2,7 @@
   position: fixed;
   width: 100%;
   height: 100%;
+  background: rgba(0, 0, 0, 0.7137254902);
   left: 0;
   top: 0;
   z-index: 1000;
@@ -56,7 +57,7 @@
 .top {
   width: 100%;
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1fr 2.05fr;
   gap: 10px;
 }
 .top > .change-amount, .top > input {
@@ -65,7 +66,7 @@
 }
 .top > input {
   font-size: 24px;
-  padding: 0 10px;
+  padding: 15px 10px;
   border: none;
   color: var(--text);
 }
@@ -80,6 +81,10 @@
 
 .change-amount {
   padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  font-size: 24px;
 }
 
 .payment-amount {
