--- a/src/components/PaymentForm/index.module.scss
+++ b/src/components/PaymentForm/index.module.scss
@@ -2,6 +2,7 @@
   position: fixed;
   width: 100%;
   height: 100%;
+  background: #000000b6;
   left: 0;
   top: 0;
   z-index: 1000;
@@ -58,7 +59,7 @@
 .top {
   width: 100%;
   display: grid;
-  grid-template-columns: 1fr 2fr;
+  grid-template-columns: 1fr calc(2.05fr);
   gap: 10px;
 
   > .change-amount, > input {
@@ -68,7 +69,7 @@
 
   > input {
     font-size: 24px;
-    padding: 0 10px;
+    padding: 15px 10px;
     border: none;
     color: var(--text);
 
@@ -81,6 +82,10 @@
 
 .change-amount {
   padding: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: start;
+  font-size: 24px;
 }
 
 .payment-amount {
