--- a/src/pages/Performance/index.module.scss
+++ b/src/pages/Performance/index.module.scss
@@ -12,3 +12,56 @@
   gap: 25px;
   max-height: calc(100vh - 50px);
 }
+
+.performance-list {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 250px));
+  gap: 25px;
+}
+
+.performance-item {
+  height: 250px;
+  width: 250px;
+  background: var(--primary);
+  padding: 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: start;
+  border-radius: var(--border-radius);
+}
+
+.item-heading {
+  font-size: 32px;
+  margin: 12px 0;
+}
+
+.item-value {
+  font-size: 24px;
+  margin: 12px 0;
+  position: relative;
+  width: 100%;
+  text-align: center;
+  
+  &::before {
+    bottom: -20px;
+    left: 1%;
+    border-bottom: 3px solid var(--secondary);
+    transition: 0.5s all;
+}
+
+  &::before {
+    display: block;
+    content: "";
+    width: 98%;
+    height: 40px;
+    position: absolute;
+    pointer-events: none;
+  }
+}
+
+.item-desc {
+  font-size: 14px;
+  margin-top: 16px;
+  text-align: center;
+}
