--- a/src/layouts/Navbar/index.module.css
+++ b/src/layouts/Navbar/index.module.css
@@ -49,6 +49,7 @@
   height: 60px;
   line-height: 60px;
   min-width: 40px;
+  padding-left: 10px;
 }
 
 .hamburger {
@@ -78,6 +79,7 @@
 }
 .nav-item > a.active {
   background: white;
+  border-radius: var(--border-radius);
 }
 .nav-item > a.active > .link,
 .nav-item > a.active > svg {
