--- a/src/components/PerformanceTable/index.module.css
+++ b/src/components/PerformanceTable/index.module.css
@@ -3,8 +3,24 @@
   max-width: 1024px;
   padding: 10px;
 }
-
-.performance-header > tr > th {
+.performance-table tr {
+  position: relative;
+}
+.performance-table tr::before {
+  bottom: 0px;
+  left: 0;
+  border-bottom: 2px solid var(--secondary);
+  transition: 0.5s all;
+}
+.performance-table tr::before {
+  display: block;
+  content: "";
+  width: 100%;
+  height: 40px;
+  position: absolute;
+  pointer-events: none;
+}
+.performance-table th, .performance-table td {
   text-align: left;
   padding-right: 2rem;
   padding-top: 1.5rem;
