--- a/src/components/PerformanceTable/index.module.scss
+++ b/src/components/PerformanceTable/index.module.scss
@@ -1,15 +1,37 @@
 .performance-table {
   width: 100%;
   max-width: 1024px;
-  padding: 10px
-}
-
-.performance-header {
+  padding: 10px;
   
-  > tr > th {
+  tr {
+    position: relative;
+
+    &::before {
+      bottom: 0px;
+      left: 0;
+      border-bottom: 2px solid var(--secondary);
+      transition: 0.5s all;
+  }
+  
+    &::before {
+      display: block;
+      content: "";
+      width: 100%;
+      height: 40px;
+      position: absolute;
+      pointer-events: none;
+    }
+  }
+
+  th, td {
     text-align: left;
     padding-right: 2rem;
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
   }
+}
+
+.performance-header {
+  
+  
 }
