--- a/src/components/CheckoutMenu/index.module.scss
+++ b/src/components/CheckoutMenu/index.module.scss
@@ -101,6 +101,11 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+
+  > p {
+    font-size: 18px;
+    padding: 10px 0;
+  }
 }
 
 .receipt-grid {
