--- a/src/components/CheckoutMenu/index.module.scss
+++ b/src/components/CheckoutMenu/index.module.scss
@@ -106,6 +106,20 @@
     font-size: 18px;
     padding: 10px 0;
   }
+
+  > button {
+    padding: 0 20px;
+    background: var(--primary);
+    font-size: 20px;
+    color: var(--text);
+    border: none;
+    cursor: pointer;
+
+    &:disabled {
+      background: #070f15;
+      cursor: no-drop;
+    }
+  }
 }
 
 .receipt-grid {
