--- a/src/components/Discount/index.module.css
+++ b/src/components/Discount/index.module.css
@@ -24,7 +24,7 @@
 }
 
 .close-btn {
-  align-self: end;
+  align-self: flex-end;
   width: 25px;
   height: 25px;
   font-size: 32px;
@@ -43,9 +43,8 @@
 .form-input > input {
   width: 100%;
   height: 48px;
-  padding: 5px 10px;
-  border-radius: var(--border-radius);
   padding: 10px 20px;
+  border-radius: var(--border-radius);
   background: var(--primary);
   font-size: 18px;
   color: var(--text);
@@ -75,9 +74,7 @@
 .discount-type-buttons {
   display: flex;
   width: 100%;
-  flex-direction: row;
   gap: 10px;
-  justify-content: start;
 }
 .discount-type-buttons > button {
   flex: 1;
@@ -95,7 +92,6 @@
 .form-buttons {
   display: flex;
   width: 100%;
-  flex-direction: row;
   gap: 10px;
   padding: 0 40px;
   justify-content: center;
