--- a/src/components/Discount/index.module.scss
+++ b/src/components/Discount/index.module.scss
@@ -24,7 +24,7 @@
 }
 
 .close-btn {
-  align-self: end;
+  align-self: flex-end;
   width: 25px;
   height: 25px;
   font-size: 32px;
@@ -43,9 +43,8 @@
   > input {
     width: 100%;
     height: 48px;
-    padding: 5px 10px;
-    border-radius: var(--border-radius);
     padding: 10px 20px;
+    border-radius: var(--border-radius);
     background: var(--primary);
     font-size: 18px;
     color: var(--text);
@@ -78,9 +77,7 @@
 .discount-type-buttons {
   display: flex;
   width: 100%;
-  flex-direction: row;
   gap: 10px;
-  justify-content: start;
 
   > button {
     flex: 1;
@@ -100,7 +97,6 @@
 .form-buttons {
   display: flex;
   width: 100%;
-  flex-direction: row;
   gap: 10px;
   padding: 0 40px;
   justify-content: center;
