--- a/src/components/CustomerForm/index.module.scss
+++ b/src/components/CustomerForm/index.module.scss
@@ -88,3 +88,18 @@
     }
   }
 }
+
+.form ~ button {
+  flex: 1;
+  padding: 10px 20px;
+  background: var(--primary);
+  font-size: 18px;
+  color: var(--text);
+  border: none;
+  cursor: pointer;
+
+  &:disabled {
+    background: #070f15;
+    cursor: no-drop;
+  }
+}
