--- a/src/components/TicketsTable/index.module.css
+++ b/src/components/TicketsTable/index.module.css
@@ -28,4 +28,19 @@
   background: var(--danger);
   padding: 10px;
   border-radius: var(--border-radius);
+}
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  margin: auto 0;
+  padding-right: 2rem;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+  vertical-align: top;
+  gap: 10px;
+  z-index: 99;
+}
+.buttons > button {
+  padding: 5px;
 }/*# sourceMappingURL=index.module.css.map */
