--- a/src/components/TicketsTable/index.module.scss
+++ b/src/components/TicketsTable/index.module.scss
@@ -38,6 +38,22 @@
   border-radius: var(--border-radius);
 }
 
+.buttons {
+  display: flex;
+  flex-direction: row;
+  margin: auto 0;
+  padding-right: 2rem;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+  vertical-align: top;
+  gap: 10px;
+  z-index: 99;
+
+  > button {
+    padding: 5px;
+  }
+}
+
 @media (max-width: 1624px) {
   // .tickets-list {
   //   grid-template-columns: repeat(4, minmax(100px, 1fr));
