--- a/src/components/NewOrderServiceItem/index.module.css
+++ b/src/components/NewOrderServiceItem/index.module.css
@@ -5,6 +5,10 @@
   cursor: pointer;
   transition: scale var(--transition);
   animation: start 0.1s ease;
+  position: relative;
+}
+.service-item:hover > .delete-service {
+  display: flex;
 }
 
 .service {
@@ -21,6 +25,7 @@
   font-weight: 600;
   text-transform: uppercase;
   font-size: 20px;
+  cursor: pointer;
 }
 
 .cleaning {
@@ -50,4 +55,17 @@
   to {
     scale: 1;
   }
+}
+.delete-service {
+  position: absolute;
+  top: 2.5px;
+  right: 2.5px;
+  width: 15px;
+  height: 15px;
+  display: none;
+  border-radius: 50%;
+  border: solid 2px red;
+  font-size: 14px;
+  align-items: center;
+  justify-content: center;
 }/*# sourceMappingURL=index.module.css.map */
