--- a/src/pages/NewOrder/index.module.css
+++ b/src/pages/NewOrder/index.module.css
@@ -23,7 +23,8 @@
 }
 
 .service-items-list {
-  margin-top: 25px;
+  padding-top: 25px;
+  position: relative;
   overflow: auto;
   grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
 }
