--- a/src/pages/NewOrder/index.module.scss
+++ b/src/pages/NewOrder/index.module.scss
@@ -23,7 +23,7 @@
 }
 
 .service-items-list {
-  padding-top: 25px;
+  margin-top: 25px;
   position: relative;
   overflow: auto;
   grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
