--- a/src/components/NewOrderItem/index.module.css
+++ b/src/components/NewOrderItem/index.module.css
@@ -28,4 +28,8 @@
   width: 24px;
   height: 24px;
   cursor: pointer;
+}
+
+.name {
+  text-transform: capitalize;
 }/*# sourceMappingURL=index.module.css.map */
