--- a/src/pages/Customers/index.module.scss
+++ b/src/pages/Customers/index.module.scss
@@ -77,6 +77,10 @@
     padding-top: 1.5rem;
     padding-bottom: 1.5rem;
   }
+
+  input {
+    font-size: 20px;
+  }
 }
 
 @media (max-width: 1624px) {
@@ -100,5 +104,21 @@
 
   &::before {
     display: none !important;
+  }
+}
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  margin: auto 0;
+  padding-right: 2rem;
+  padding-top: 1.5rem;
+  padding-bottom: 1.5rem;
+  vertical-align: top;
+  gap: 10px;
+  z-index: 99;
+
+  > button {
+    padding: 5px;
   }
 }
