--- a/src/components/PaymentForm/index.module.css
+++ b/src/components/PaymentForm/index.module.css
@@ -156,4 +156,5 @@
   border: none;
   border-radius: var(--border-radius);
   color: var(--text);
+  margin-left: 25px;
 }/*# sourceMappingURL=index.module.css.map */
