--- a/src/components/FinalReceipt/index.module.css
+++ b/src/components/FinalReceipt/index.module.css
@@ -132,6 +132,14 @@
   margin: 5px 0;
 }
 
+.names {
+  margin: 5px 0;
+}
+.names p {
+  text-align: right;
+  font-size: 20px;
+}
+
 .break {
   page-break-after: always;
 }
