--- a/src/components/FinalReceipt/index.module.scss
+++ b/src/components/FinalReceipt/index.module.scss
@@ -136,6 +136,15 @@
   margin: 5px 0;
 }
 
+.names {
+  margin: 5px 0;
+
+  p {
+    text-align: right;
+    font-size: 20px;
+  }
+}
+
 .break {
   page-break-after: always;
 }
