--- a/src/components/ReceiptPreview/index.module.scss
+++ b/src/components/ReceiptPreview/index.module.scss
@@ -183,3 +183,12 @@
   font-size: 14.5px !important;
   letter-spacing: 2px;
 }
+
+.names {
+  margin: 5px 0;
+
+  p {
+    text-align: right;
+    font-size: 20px;
+  }
+}
