--- a/src/components/NewOrderItem/index.module.css
+++ b/src/components/NewOrderItem/index.module.css
@@ -15,7 +15,7 @@
   gap: 10px;
 }
 .receipt > p {
-  font-size: 12px;
+  font-size: 14px;
 }
 
 .receipt-row {
@@ -25,11 +25,18 @@
   align-items: center;
 }
 .receipt-row > svg {
-  width: 24px;
-  height: 24px;
+  width: 42px;
+  height: 42px;
   cursor: pointer;
+}
+.receipt-row > p {
+  font-size: 20px;
 }
 
 .name {
   text-transform: capitalize;
+}
+
+.trash-btn {
+  margin-left: auto;
 }/*# sourceMappingURL=index.module.css.map */
