--- a/src/components/NewOrderItem/index.module.scss
+++ b/src/components/NewOrderItem/index.module.scss
@@ -15,7 +15,7 @@
   gap: 10px;
 
   > p {
-    font-size: 12px;
+    font-size: 14px;
   }
 }
 
@@ -26,12 +26,20 @@
   align-items: center;
 
   > svg {
-    width: 24px;
-    height: 24px;
+    width: 42px;
+    height: 42px;
     cursor: pointer;
+  }
+
+  > p {
+    font-size: 20px;
   }
 }
 
 .name {
   text-transform: capitalize;
+}
+
+.trash-btn {
+  margin-left: auto;
 }
