--- a/src/layouts/Navbar/index.module.scss
+++ b/src/layouts/Navbar/index.module.scss
@@ -9,6 +9,8 @@
   top: 0;
   left: 0;
   height: 100%;
+  display: flex;
+  flex-direction: column;
 
   &::before {
     top: 2.5%;
@@ -135,4 +137,8 @@
   pointer-events: auto;
   transition: var(--transition);
   padding: 10px 5px;
+}
+
+.version {
+  margin-top: auto;
 }
