--- a/src/components/FinalReceipt/index.module.css
+++ b/src/components/FinalReceipt/index.module.css
@@ -78,7 +78,7 @@
   flex-direction: column;
   align-items: center;
   max-width: 280px;
-  font-family: "Consolas", "monaco", monospace;
+  font-family: "Helvetica", "Arial", sans-serif;
 }
 .receipt p {
   color: black;
