--- a/src/components/FinalReceipt/index.module.scss
+++ b/src/components/FinalReceipt/index.module.scss
@@ -80,8 +80,8 @@
   flex-direction: column;
   align-items: center;
   max-width: 280px;
-  // font-family: 'Helvetica', 'Arial', sans-serif;
-  font-family: "Consolas", "monaco", monospace; 
+  font-family: 'Helvetica', 'Arial', sans-serif;
+  // font-family: "Consolas", "monaco", monospace; 
 
   p {
     color: black;
