--- a/src/layouts/Navbar/index.module.css
+++ b/src/layouts/Navbar/index.module.css
@@ -128,4 +128,7 @@
 
 .version {
   margin-top: auto;
+  width: 100%;
+  text-align: center;
+  font-weight: 600;
 }/*# sourceMappingURL=index.module.css.map */
