--- a/src/pages/Performance/index.module.scss
+++ b/src/pages/Performance/index.module.scss
@@ -3,6 +3,28 @@
   display: grid;
 }
 
+.header {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 25px;
+
+  > button {
+    padding: 10px;
+    font-size: 14px;
+    text-align: left;
+    cursor: pointer;
+    background: none;
+    border: none;
+    color: white;
+    font-size: 24px;
+
+    > svg {
+      float: right;
+    }
+  }
+}
+
 .performance {
   height: 100%;
   padding: 10px;
@@ -10,7 +32,6 @@
   display: flex;
   flex-direction: column;
   gap: 25px;
-  max-height: calc(100vh - 50px);
 }
 
 .performance-list {
