--- a/src/components/FinalReceipt/index.module.scss
+++ b/src/components/FinalReceipt/index.module.scss
@@ -139,7 +139,7 @@
 
 .note {
   font-size: 14px !important;
-  margin-top: 15px;
+  margin: 15px -25px;
   line-height: 1.4;
 }
 
@@ -204,4 +204,19 @@
   font-size: 15px !important;
   letter-spacing: 2px;
   margin-top: 15px;
+}
+
+.item-receipt {
+  .total-pieces {
+    margin: 0 !important;
+    margin-top: 10px !important;
+  }
+
+  .ticket-no {
+    margin-bottom: 0 !important;
+  }
+
+  .ticket-items {
+    padding: 0 25px !important;
+  }
 }
