--- a/src/components/FinalReceipt/index.module.css
+++ b/src/components/FinalReceipt/index.module.css
@@ -78,25 +78,25 @@
   flex-direction: column;
   align-items: center;
   max-width: 280px;
-  font-family: "Lucida Console", Monaco, monospace;
+  font-family: "Helvetica", "Arial", sans-serif;
 }
 .receipt p {
   color: black;
   text-transform: uppercase;
-  font-weight: 600;
   text-align: center;
-  font-size: 16px;
-  transform: scaleY(1.4);
+  font-size: 18px;
 }
 
 .heading {
-  margin-top: 10px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
+  display: flex;
+  gap: 10px;
+  flex-direction: column;
 }
 
 .receipt-info {
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-top: 10px;
+  margin-bottom: 10px;
   width: 100%;
 }
 
@@ -133,7 +133,7 @@
 }
 
 .note {
-  font-size: 14px !important;
+  font-size: 12px !important;
   margin: 15px -25px;
   line-height: 1.4;
 }
@@ -143,7 +143,7 @@
 }
 .names p {
   text-align: right;
-  font-size: 20px;
+  font-size: 18px;
 }
 
 .break {
@@ -157,7 +157,7 @@
 }
 .ticket-date > b {
   margin-right: auto;
-  margin-left: 20px;
+  margin-left: 6px;
 }
 
 .ticket-no {
@@ -167,9 +167,10 @@
   margin-bottom: 10px;
 }
 .ticket-no > P {
-  font-size: 20px !important;
+  font-size: 22px !important;
   height: 100%;
   margin: 5px 0;
+  text-align: left;
 }
 
 @media print {
@@ -178,11 +179,12 @@
   }
 }
 .xl {
-  font-size: 18px !important;
+  font-size: 20px !important;
 }
 
 .title {
   word-spacing: 10px;
+  font-size: 16px !important;
 }
 
 .owner {
@@ -191,9 +193,12 @@
 }
 
 .info {
-  font-size: 15px !important;
+  font-size: 16px !important;
   letter-spacing: 2px;
-  margin-top: 15px;
+}
+
+.num {
+  font-size: 17px !important;
 }
 
 .item-receipt .total-pieces {
