--- a/src/components/FinalReceipt/index.module.css
+++ b/src/components/FinalReceipt/index.module.css
@@ -90,7 +90,6 @@
 .heading {
   margin-bottom: 10px;
   display: flex;
-  gap: 10px;
   flex-direction: column;
 }
 
@@ -129,7 +128,7 @@
 
 .total-pieces {
   text-align: center;
-  margin: 20px 0;
+  margin: 10px 0;
 }
 
 .note {
@@ -155,7 +154,7 @@
   flex-direction: row;
   justify-content: space-around;
 }
-.ticket-date > b {
+.ticket-date > span {
   margin-right: auto;
   margin-left: 6px;
 }
@@ -164,12 +163,10 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-bottom: 10px;
 }
 .ticket-no > P {
   font-size: 22px !important;
   height: 100%;
-  margin: 5px 0;
   text-align: left;
 }
 
