--- a/src/components/FinalReceipt/index.module.scss
+++ b/src/components/FinalReceipt/index.module.scss
@@ -97,7 +97,7 @@
 .heading {
   margin-bottom: 10px;
   display: flex;
-  gap: 10px;
+  // gap: 10px;
   flex-direction: column;
 }
 
@@ -137,7 +137,7 @@
 
 .total-pieces {
   text-align: center;
-  margin: 20px 0;
+  margin: 10px 0;
 }
 
 .note {
@@ -164,7 +164,7 @@
   flex-direction: row;
   justify-content: space-around;
 
-  > b {
+  > span {
     margin-right: auto;
     margin-left: 6px;
   }
@@ -174,12 +174,12 @@
   display: flex;
   flex-direction: row;
   justify-content: space-between;
-  margin-bottom: 10px;
+  // margin-bottom: 10px;
   
   > P {
     font-size: 22px !important;
     height: 100%;
-    margin: 5px 0;
+    // margin: 5px 0;
     text-align: left;
   }
 }
