--- a/src/components/CustomerForm/index.module.scss
+++ b/src/components/CustomerForm/index.module.scss
@@ -7,13 +7,13 @@
   top: 0;
   z-index: 1000;
   overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 12px;
 }
 
 .outer {
-  position: absolute;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, -50%);
   width: 500px;
   background: var(--secondary);
   border-radius: var(--border-radius);
@@ -21,6 +21,7 @@
   display: flex;
   flex-direction: column;
   padding: 10px;
+  margin-right: 25%;
 }
 
 .close-btn {
