add total quantity number

--- a/src/components/CheckoutMenu/index.module.css
+++ b/src/components/CheckoutMenu/index.module.css
@@ -92,6 +92,7 @@
   flex-direction: row;
   justify-content: space-between;
   padding: 10px 20px;
+  padding-bottom: 0;
 }
 .receipt-row > p {
   font-size: 18px;
@@ -132,6 +133,7 @@
   border: none;
   cursor: pointer;
   height: 75px;
+  border-radius: var(--border-radius);
 }
 .receipt-btn:disabled {
   background: #070f15;
