--- a/src/components/CheckoutMenu/index.module.scss
+++ b/src/components/CheckoutMenu/index.module.scss
@@ -100,6 +100,7 @@
   flex-direction: row;
   justify-content: space-between;
   padding: 10px 20px;
+  padding-bottom: 0;
 
   > p {
     font-size: 18px;
@@ -143,6 +144,7 @@
   border: none;
   cursor: pointer;
   height: 75px;
+  border-radius: var(--border-radius);
 
   &:disabled {
     background: #070f15;
