--- a/src/pages/NewOrder/index.module.scss
+++ b/src/pages/NewOrder/index.module.scss
@@ -23,7 +23,7 @@
 }
 
 .service-items-list {
-  margin-top: 25px;
+  // margin-top: 25px;
   position: relative;
   overflow: auto;
   grid-template-columns: repeat(auto-fill, minmax(120px, 1fr));
@@ -41,6 +41,7 @@
   border: none;
   border-radius: var(--border-radius);
   margin-bottom: -25px;
+  height: 100%;
 }
 
 @media (max-width: 1624px) {
@@ -68,5 +69,27 @@
 
   .receipt-list {
     flex: 1 0 600px;
+  }
+}
+
+.controls {
+  display: flex;
+  justify-content: space-between;
+
+  .receipt-btn {
+    padding: 14px 20px;
+    background: var(--primary);
+    font-size: 20px;
+    color: var(--text);
+    border: none;
+    cursor: pointer;
+    // height: 75px;
+    border-radius: var(--border-radius);
+    margin-left: auto;
+  
+    &:disabled {
+      background: #070f15;
+      cursor: no-drop;
+    }
   }
 }
