--- a/src/components/Pagination/index.module.scss
+++ b/src/components/Pagination/index.module.scss
@@ -11,5 +11,11 @@
     width: 100%;
     height: 40px;
     font-size: 20px;
+    border: none;
   }
+}
+
+.active {
+  color: white;
+  background: #FF5733;
 }
