--- a/src/components/Pagination/index.module.css
+++ b/src/components/Pagination/index.module.css
@@ -11,4 +11,10 @@
   width: 100%;
   height: 40px;
   font-size: 20px;
+  border: none;
+}
+
+.active {
+  color: white;
+  background: #FF5733;
 }/*# sourceMappingURL=index.module.css.map */
